--- a/index.css
+++ b/index.css
@@ -1,10 +1,33 @@
 body{
-    background-color: #3498db
+    background-color: #3498db;
+    text-align: center;
+    padding: 10px 0;
+
+}
+
+#clock{
+    color: white;
+    font-family: "Times New Roman";
+    font-size: 125px;
+    -webkit-text-stroke: 2px black;
 }
 
 h1{
     color: white;
     font-family: "Times New Roman";
+}
+
+.js-greeting{
+    color: white;
+    font-family: "Times New Roman";
+    font-size: 100px;
+    -webkit-text-stroke: 2px black;
+
+}
+
+.js-weather{
+    color: white;
+    text-align: right;
 }
 
 .clicked {
@@ -15,6 +38,10 @@ h1{
 
 .button {
     cursor: pointer;
+}
+
+.js-list{
+    color: white;
 }
 
 .form,
